Restructured things so there are no more magical constants and a config file is now shared between the js files.

--- a/RedditCrap/manifest.json
+++ b/RedditCrap/manifest.json
@@ -30,5 +30,8 @@
         "16": "app/res/icon16.png",
         "48": "app/res/icon48.png",
         "128": "app/res/icon128.png"
-    }
+    },
+    "web_accessible_resources": [
+        "app/conf/config.json"
+    ]
 }
